overlap fixed at all resolutions.

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -411,6 +411,7 @@ span.version {
 	clear: both;
 	position: relative;
 	top: 7px;
+	margin-right: 40%;
 }
 
 .app-description {
